# Stock-Agent

./: render.yaml
agent-frontend/: Dockerfile  index.html  package-lock.json  package.json
agent-frontend/src/: App.jsx
agent-frontend/src/components/: AgentComponent.jsx  agent.css
backend/: Dockerfile  endpoint.py  graph.py  main.py  models.py  prompt.py  pyproject.toml  requirements.txt  tools.py
